2024-06-01  Dmitry Gutov  <dmitry@gutov.dev>

	* tramp.el (tramp-handle-shell-command):
	Use `async-shell-command-mode' when available.

2024-05-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el (tramp-actions-copy-out-of-band)
	(tramp-container-no-container-regexp): Remove.  Do not register them.
	(tramp-distrobox-no-container-regexp): New defcustom.
	(tramp-enable-distrobox-method): Add it to
	`'tramp-actions-before-shell.  (Bug#71200)

2024-05-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el (tramp-container-no-container-regexp):
	New defcustom.
	(tramp-actions-before-shell, tramp-actions-copy-out-of-band): Declare.
	Add `tramp-container-no-container-regexp'.  (Bug#71200)

	* tramp-sh.el (tramp-methos) <scp, ssh>:
	Adapt `tramp-direct-async' argument.  (Bug#71259)

2024-05-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	Obey `tramp-histfile-override'.  (Bug#71049)

	* tramp-container.el (tramp-distrobox-program): New defcustom.
	(tramp-distrobox-method): New defconst.
	(tramp-distrobox--completion-function)
	(tramp-enable-distrobox-method): New defuns.  (Bug#71200)
	(tramp-docker-method, tramp-dockercp-method)
	(tramp-podman-method, tramp-podmancp-method)
	(tramp-kubernetes-method, tramp-flatpak-method)
	(tramp-apptainer-method, tramp-nspawn-method): Adapt docstring.

	* tramp-sh.el (tramp-histfile-override): Add ;;;###tramp-autoload
	cookie and `permanent-local' symbol property.

2024-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	Set sentinel `ignore'.  (Bug#71049)

	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	Adapt progress-reporter message.

	* tramp-sh.el (tramp-maybe-open-connection):
	Divide progress-reporter into two parts.  (Bug#70901)

2024-05-21  Michael Albinus  <michael.albinus@gmx.de>
